--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ h2 {
 
 
 
-
+/*_________________________________________________________________________________________________*/
 
 @media (min-device-width: 650px) and (min-width: 901px) {
     .toppmeny {
@@ -221,6 +221,16 @@ h2 {
 
     }
 
+    .yes {
+        left: 12%;
+
+    }
+
+    .no {
+        left: 30;
+
+    }
+
 }
 
 @media (max-width: 860px) {
@@ -229,6 +239,19 @@ h2 {
         width: 400px;
 
     }
+
+    .yes {
+        left: 10%;
+
+    }
+
+    .no {
+        left: 28;
+
+    }
+
+    
+
 }
 
 @media (max-width: 750px) {
@@ -237,6 +260,17 @@ h2 {
         width: 350px;
 
     }
+
+    .yes {
+        left: 8%;
+
+    }
+
+    .no {
+        left: 26;
+
+    }
+
 }
 
 @media (max-width: 600px) {
@@ -245,4 +279,45 @@ h2 {
         width: 300px;
 
     }
+
+    .yes {
+        left: 6%;
+
+    }
+
+    .no {
+        left: 24;
+
+    }
+
 }
+
+/*_________________________________________________________________________________________________*/
+
+
+
+/*_________________________________________________________________________________________________*/
+
+
+
+/*_________________________________________________________________________________________________*/
+
+
+
+/*_________________________________________________________________________________________________*/
+
+
+
+/*_________________________________________________________________________________________________*/
+
+
+
+/*_________________________________________________________________________________________________*/
+
+
+
+/*_________________________________________________________________________________________________*/
+
+
+
+/*_________________________________________________________________________________________________*/
