--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 	
 }
 
-
+/*_________________________________________________________________________________________________*/
 
 nav {
     position: relative;
@@ -90,6 +90,8 @@ nav a {
 	
 }
 
+/*_________________________________________________________________________________________________*/
+
 .show {
     overflow: visible;
 }
@@ -102,7 +104,9 @@ nav a {
 
 .title_game {
     color: white;
-	position: absolute;
+    position: absolute;
+    text-decoration: none;
+    
 	
 }
 
