--- a/css/style.css
+++ b/css/style.css
@@ -90,24 +90,16 @@ nav a {
 	
 }
 
-/*_________________________________________________________________________________________________*/
+/*_______________________________________________Home__________________________________________________*/
 
 .show {
     overflow: visible;
 }
 
-
-.title {
-    color: white;
-	
-}
-
 .title_game {
     color: white;
-    position: absolute;
     text-decoration: none;
-    
-	
+    	
 }
 
 h2 {
@@ -144,14 +136,20 @@ h2 {
 .widget {
 	
     background-color: white;
-    text-align: center; 
+    text-align: center;
 
 }
 
-.logo {
-    
+
+
+/*_______________________________________________GAME__________________________________________________*/
+
+
+.logo { 
     text-align: center;
-	
+    position: absolute;
+    left: 44%;
+    top: 1px;
 	
 }
 
@@ -180,7 +178,6 @@ h2 {
 	
 }
 
-
 #ig1 {
 	position: absolute;
 }
@@ -194,12 +191,11 @@ h2 {
 }
 
 #g-video {
-	position: absolute;
+    position: absolute;
+    background-color: black;
 	z-index: 1;
 	
 }
-
-
 
 /*_________________________________________________________________________________________________*/
 
