--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,22 @@ h2 {
 	position: absolute;
 }
 
+#ig4 {
+	position: absolute;
+}
+
+#ig5 {
+	position: absolute;
+}
+
+#ig6 {
+	position: absolute;
+}
+
+#ig7 {
+	position: absolute;
+}
+
 #g-video {
     position: absolute;
     background-color: black;
