--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
     background-image: url(../image/index/Matrix.jpg);
-    
     background-attachment: fixed;
     background-size: cover;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -90,6 +89,14 @@ nav a {
 	
 }
 
+.logo { 
+    text-align: center;
+    position: absolute;
+    left: 44%;
+    top: 1px;
+	
+}
+
 /*_______________________________________________Home__________________________________________________*/
 
 .show {
@@ -144,14 +151,12 @@ h2 {
 
 /*_______________________________________________GAME__________________________________________________*/
 
+.content_g {
+    display: flex;
 
-.logo { 
-    text-align: center;
-    position: absolute;
-    left: 44%;
-    top: 1px;
-	
 }
+
+
 
 .img-g {
 	position: absolute;
@@ -211,6 +216,12 @@ h2 {
     background-color: black;
 	z-index: 1;
 	
+}
+
+.content_game {
+    left: 50%;
+    width: 50%;
+
 }
 
 /*_________________________________________________________________________________________________*/
